# MyCells

./: CMakeLists.txt
scripts/: init_db.sql
src/app/: AppController.cpp  AppController.h  main.cpp
src/core/model/: CellState.h  CoreTypes.h  EnvironmentState.h  SimulationConfig.h
src/core/time/: FastForwardEngine.cpp  FastForwardEngine.h
src/core/update/: CellUpdater.cpp  CellUpdater.h  GrowthRules.cpp  GrowthRules.h  StressRules.cpp  StressRules.h
src/services/: SimulationService.cpp  SimulationService.h
src/storage/: CellRepository.cpp  CellRepository.h  Database.cpp  Database.h  EnvironmentRepository.cpp  EnvironmentRepository.h  EventLogRepository.cpp  EventLogRepository.h  OptionalCompat.h  SqliteCompat.h  StorageTypes.h  UserActionRepository.cpp  UserActionRepository.h
src/ui/qml/: Main.qml
src/ui/qml/components/: CellScene.qml  MiniLineChart.qml
src/utils/: TimeUtils.h
tests/core/: CatchCompat.h  CellUpdaterTest.cpp  FastForwardEngineTest.cpp  SimpleTest.h  TestMain.cpp
tests/integration/: SimulationServiceTest.cpp
